instrument-craft-shop/deployment/instrument-craft-shop.yaml
kind: Service
apiVersion: v1
metadata:
  name: instrument-craft-shop
  labels:
    app: instrument-craft-shop
spec:
  selector:
    app: instrument-craft-shop
  ports:
    - port: 9080
      name: http
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: instrument-craft-shop
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: instrument-craft-shop
        version: v1
    spec:
      containers:
      - name: instrument-craft-shop
        image: registry.ng.bluemix.net/journeys/craft-shop:1
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - curl -f localhost:9080/
          initialDelaySeconds: 40
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - curl -f localhost:9080/instrument-craft-shop/resources/health
          initialDelaySeconds: 60
      imagePullSecrets:
      - name: ibm-journey 
      restartPolicy: Always
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: instrument-craft-shop
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /instrument-craft-shop/resources/instruments
        backend:
          serviceName: instrument-craft-shop
          servicePort: 9080
      - path: /instrument-craft-shop/resources/health
        backend:
          serviceName: instrument-craft-shop
          servicePort: 9080
        
---
